--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								<h2>HOLI CRAYOLI<br />
+								ARRIBA EL CRUZ AZUL</h2>
+								<p>no se tu pero yo te esperare y en busca de ti yo estaré<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
