--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: landing
 								<h2>HOLI CRAYOLI<br />
 								ARRIBA EL CRUZ AZUL</h2>
 								<p>no se tu pero yo te esperare y en busca de ti yo estaré<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								come cacca Melina.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="https://cdn2.iconfinder.com/data/icons/user-interface-2-17/32/user-interface-basic-element-cloud-512.png"><span class="label">Lorem</span></span></li>
