--- a/carlos.html
+++ b/carlos.html
@@ -18,10 +18,10 @@ title: Carlos
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>HOLI CRAYOLI<br />
-								ARRIBA EL CRUZ AZUL</h2>
-								<p>no se tu pero yo te esperare y en busca de ti yo estaré<br />
-								come cacca Melina.</p>
+								<h2>BRRRR AHHH<br />
+								RG4LIFE BBY</h2>
+								<p>HOLA MI NOMBRE ES ROSEL<br />
+								come caca Melina.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
