--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: landing
 ---
 				<!-- Banner -->
 					<section id="banner">
-						<div class="inner"><img src="images/morrosfumando.jpg" alt="" /></div><div class="content">
+						<div class="inner">
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
