--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/yo.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
+								<h2>La Salud<br />
 								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>La salud es uno de los elementos más relevantes para el desarrollo de una vida larga y cualitativa.</p>
 							</div>
 						</section>
 						<section class="spotlight">
