--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/cr7.jpg" alt="" /></div><div class="content">
-								<h2>CADA VIDA<br />
-								IMPORTA</h2>
-								<p></p>
+								<h2>HOSPITAL<br />
+								DELGADO</h2>
+								<p>Este hospital es un establecimiento destinado para la atención y asistencia a enfermos por medio de personal médico, enfermería, personal auxiliar y de servicios técnicos durante 24 horas, 365 días del año y disponiendo de tecnología, aparatología, instrumental y farmacología adecuadas.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>MISIÓN<br />
+								</h2>
+								<p>Brindar servicios de salud centrados en el paciente, desarrollando programas médico-quirúrgicos enfocados a la prevención, tratamiento y rehabilitación, con ética, equidad, calidad y seguridad, formando talento humano de excelencia e innovando con investigación aplicada y fortaleciendo redes interinstitucionales en un marco de eficiencia y efectividad.</p>
 							</div>
 						</section>
 					</section>
