--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>¡GRACIAS POR VISITARNOS!</h2>
+								<p>Esperamos que este Hospital haya sido de su agrado y se ajuste a sus posibilidades. </p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#" class="button fit">IR AL INICIO</a></li>
 							</ul>
 						</div>
 					</section>
