--- a/servicios.html
+++ b/servicios.html
@@ -2,9 +2,10 @@
 layout: page
 title: SERVICIOS
 ---
-	<h3>Lorem ipsum dolor</h3>
-	<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-	<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+	<h3>Clínica de Geriatría</h3>
+	<p>Todos estamos destinados a envejecer, sin embargo, lo que nadie puede predecir es el momento exacto en que comienza ese “nuevo” estilo de vida, el cual trae consigo los olvidos, las dificultades para ver o escuchar o cualquier “achaque” físico que certifique que los años han pasado.
+           Según la Organización Mundial de las Salud (OMS), el envejecimiento es un proceso completamente natural, que podría depender en 35% de la genética y en 65% de los factores ambientales.</p>
+	<p>Envejecer con éxito significa conservar la calidad de vida, y ese camino comienza a transitarse desde la juventud. Por eso, mantenerse activo corporal e intelectualmente, llevar una vida sana en cuanto a alimentación, olvidarse de fumar, beber en exceso y, por sobre todas las cosas, procurar ser feliz y tomarse la vida con calma, son quizás las mejores recomendaciones para ser un adulto mayor feliz y saludable.</p>
 	<hr />
 	<h4>Feugiat aliquam</h4>
 	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
