--- a/servicios.html
+++ b/servicios.html
@@ -8,14 +8,14 @@ title: SERVICIOS
 	<p>Envejecer con éxito significa conservar la calidad de vida, y ese camino comienza a transitarse desde la juventud. Por eso, mantenerse activo corporal e intelectualmente, llevar una vida sana en cuanto a alimentación, olvidarse de fumar, beber en exceso y, por sobre todas las cosas, procurar ser feliz y tomarse la vida con calma, son quizás las mejores recomendaciones para ser un adulto mayor feliz y saludable.</p>
 	<hr />
 	<h4>Clínica de Medicina Prenatal</h4>
-	<p>Ofrece servicios que satisfagan las necesidades y expectativas de los pacientes y Médicos, proporcionando los procedimientos técnicos que definan con responsabilidad, el Diagnóstico de embarazo de alto riesgo, gemelares y Múltiples:
-        Ultrasonido de primer trimestre
-        Ultrasonido de 11-14 semanas
-        Ultrasonido Obstétrico Estructural
-        Ultrasonido tercer trimestre
-        Registro Toco cardiográfico
-        Perfil Biofísico
-        Amniocentesis Genética</p>
+	<p>Ofrece servicios que satisfagan las necesidades y expectativas de los pacientes y Médicos, proporcionando los procedimientos técnicos que definan con responsabilidad, el Diagnóstico de embarazo de alto riesgo, gemelares y Múltiples:</p>
+        </p>Ultrasonido de primer trimestre</p>
+        </p>Ultrasonido de 11-14 semanas</p>
+        </p>Ultrasonido Obstétrico Estructural</p>
+        </p>Ultrasonido tercer trimestre</p>
+        </p>Registro Toco cardiográfico</p>
+        </p>Perfil Biofísico</p>
+        </p>Amniocentesis Genética</p>
         <hr />
 	<h4>Feugiat aliquam</h4>
 	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
