--- a/servicios.html
+++ b/servicios.html
@@ -9,32 +9,33 @@ title: SERVICIOS
 	<hr />
 	<h4>Clínica de Medicina Prenatal</h4>
 	<p>Ofrece servicios que satisfagan las necesidades y expectativas de los pacientes y Médicos, proporcionando los procedimientos técnicos que definan con responsabilidad, el Diagnóstico de embarazo de alto riesgo, gemelares y Múltiples:</p>
-        </p>Ultrasonido de primer trimestre</p>
-        </p>Ultrasonido de 11-14 semanas</p>
-        </p>Ultrasonido Obstétrico Estructural</p>
-        </p>Ultrasonido tercer trimestre</p>
-        </p>Registro Toco cardiográfico</p>
-        </p>Perfil Biofísico</p>
-        </p>Amniocentesis Genética</p>
+        </p>-Ultrasonido de primer trimestre</p>
+        </p>-Ultrasonido de 11-14 semanas</p>
+        </p>-Ultrasonido Obstétrico Estructural</p>
+        </p>-Ultrasonido tercer trimestre</p>
+        </p>-Registro Toco cardiográfico</p>
+        </p>-Perfil Biofísico</p>
+        </p>-Amniocentesis Genética</p>
         <hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+	<h4>Clínica de Rehabilitación/h4>
+	<p>La clínica de rehabilitación, ofrece los servicios de terapia física y ocupacional; así como brindar la atención a los familiares en el manejo de sus pacientes.
+        Se proporciona el servicio a cualquier paciente que padezca dolor o con algún daño músculo esquelético y/o neurológico.</p>
+        </p>Contamos con personal especializado en el área y en rehabilitación Geriátrica, con todo el equipo necesario para atender diversas patologías.</p>
 	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
         <hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-        <hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-        <hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-        <hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
+	<h4>Laboratorio Clínico</h4>
+	<p>El aboratorio Clínico del Hospital Angeles Querétaro, donde la excelencia de nuestros procesos, innovación para la mejora continua de la calidad y capacitación, son nuestros pilares, por la seguridad y satisfacción de nuestros clientes.</p>
 
+Nuestro Laboratorio Clínico ofrece un extenso catálogo de pruebas que incluyen: estudios de rutina, urgentes y de alta especialidad. Contamos con tecnología de vanguardia, operada por personal altamente calificado.
 
+</p>Realizamos estudios de laboratorio en las siguientes disciplinas:</p>
+</p>Hematología</p>
+</p>Coagulación</p>
+</p>Química</p>
+</p>Inmunología</p>
+</p>Microbiología</p>
+</p>Parasitología</p>
+</p>Urianálisis</p>
+</p>Estudios de alta especialidad</p>
+</p>Biología Molecular</p>
+	
