--- a/servicios.html
+++ b/servicios.html
@@ -25,17 +25,39 @@ title: SERVICIOS
         <hr />
 	<h4>Laboratorio Clínico</h4>
 	<p>El aboratorio Clínico del Hospital Angeles Querétaro, donde la excelencia de nuestros procesos, innovación para la mejora continua de la calidad y capacitación, son nuestros pilares, por la seguridad y satisfacción de nuestros clientes.</p>
-
-Nuestro Laboratorio Clínico ofrece un extenso catálogo de pruebas que incluyen: estudios de rutina, urgentes y de alta especialidad. Contamos con tecnología de vanguardia, operada por personal altamente calificado.
-
-</p>-Realizamos estudios de laboratorio en las siguientes disciplinas:</p>
-</p>-Hematología</p>
-</p>-Coagulación</p>
-</p>-Química</p>
-</p>-Inmunología</p>
-</p>-Microbiología</p>
-</p>-Parasitología</p>
-</p>-Urianálisis</p>
-</p>-Estudios de alta especialidad</p>
-</p>-Biología Molecular</p>
-	
+        Nuestro Laboratorio Clínico ofrece un extenso catálogo de pruebas que incluyen: estudios de rutina, urgentes y de alta especialidad. Contamos con tecnología de vanguardia, operada por personal altamente calificado.
+        </p>-Realizamos estudios de laboratorio en las siguientes disciplinas:</p>
+        </p>-Hematología</p>
+        </p>-Coagulación</p>
+        </p>-Química</p>
+        </p>-Inmunología</p>
+        </p>-Microbiología</p>
+        </p>-Parasitología</p>
+        </p>-Urianálisis</p>
+        </p>-Estudios de alta especialidad</p>
+        </p>-Biología Molecular</p>
+	<hr />
+	<h4>Unidad de Urgencias</h4>
+	<p>El Servicio de Urgencias, proporciona la prestación de la atención médica urgente a los pacientes que la demanden, en el menor tiempo posible, con los recursos humanos y técnicos acorde a los altos estándares de Certificación Hospitalaria, en un entorno de seguridad y atención humanizada; cuenta con  un sistema homologado que busca la mejora de la calidad asistencial denominado TRIAGE, proceso que evalúa de forma rápida la gravedad de la afección de cada paciente para priorizar el orden del tratamiento y asignar el lugar y los medios adecuados al mismo; ésta es la llave de una atención eficaz y eficiente, donde no se atiende por orden de llegada sino por gravedad del cuadro que presentan los diferentes pacientes que acuden al servicio.</p>
+        <p></p>
+        <hr />
+        <h4>Pediatría y Neonatología</h4>
+        <p>Se ofrece el servicio de Pediatría y Neonatología que incluye:</p>
+        </p>-Atención del recién nacido en quirófano o expulsión, por parte de médicos Pediatras, los que se encuentran disponibles las 24 horas del día, los 365 días del año.</p>
+        </p>-Hospitalización: En el segundo piso de la Torre “B”. Los pacientes requieren de una estrecha vigilancia durante su estancia, ya que el médico tratante no puede estar las 24 horas del día, éste se apoya en nuestro servicio de Pediatras, para proporcionar a sus pacientes la atención de la más alta calidad y seguridad.</p>
+        </p>-Consulta en el servicio de Urgencias, todos los días del año las 24 horas para la atención de cualquier paciente pediátrico.</p>
+        </p>-Terapia Intensiva Neonatal: Contamos con médicos Pediatras Neonatólogos, para el cuidado y manejo del recién nacido  grave, con excelentes resultados.</p>
+        <hr />
+	<h4>Fisiología Cardiovascular</h4>
+	<p>La Unidad de diagnóstico cardiovascular, ofrece una excelente calidad de atención en la prestación de exámenes no invasivos del corazón, teniendo como principal misión lograr un óptimo estado de salud en la comunidad, asegurando la atención médica de la más alta calidad, a través de la integración de recursos humanos, materiales; así como tecnológicos de excelencia, para la realización de estudios diagnósticos cardiovasculares.</p>
+        </p>Realizamos entre otros, los siguientes estudios:</p>
+        </p>Eco cardiograma transtoracico</p>
+        </p>Eco cardiograma transesofagico</p>
+        </p>Eco de contraste</p>
+        </p>Eco dobutamina</p>
+        </p>Función endotelial y grosor íntima media</p>
+        </p>Holter</p>
+        </p>Mapa</p>
+        </p>Prueba de esfuerzo</p>
+        </p>Electrocardiograma de reposo</p>
+	<p></p>
