--- a/servicios.html
+++ b/servicios.html
@@ -51,13 +51,13 @@ title: SERVICIOS
 	<h4>Fisiología Cardiovascular</h4>
 	<p>La Unidad de diagnóstico cardiovascular, ofrece una excelente calidad de atención en la prestación de exámenes no invasivos del corazón, teniendo como principal misión lograr un óptimo estado de salud en la comunidad, asegurando la atención médica de la más alta calidad, a través de la integración de recursos humanos, materiales; así como tecnológicos de excelencia, para la realización de estudios diagnósticos cardiovasculares.</p>
         </p>Realizamos entre otros, los siguientes estudios:</p>
-        </p>Eco cardiograma transtoracico</p>
-        </p>Eco cardiograma transesofagico</p>
-        </p>Eco de contraste</p>
-        </p>Eco dobutamina</p>
-        </p>Función endotelial y grosor íntima media</p>
-        </p>Holter</p>
-        </p>Mapa</p>
-        </p>Prueba de esfuerzo</p>
-        </p>Electrocardiograma de reposo</p>
+        </p>-Eco cardiograma transtoracico</p>
+        </p>-Eco cardiograma transesofagico</p>
+        </p>-Eco de contraste</p>
+        </p>-Eco dobutamina</p>
+        </p>-Función endotelial y grosor íntima media</p>
+        </p>-Holter</p>
+        </p>-Mapa</p>
+        </p>-Prueba de esfuerzo</p>
+        </p>-Electrocardiograma de reposo</p>
 	<p></p>
