--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,10 @@
 layout: page
 title: CONTACTO
 ---
-### REDES SOCIALES
 
-INSTAGRAM PERSONAL:   [ _@xcaldb24x_ ](https://www.instagram.com/_xcaldb24x_/). 
+REDES SOCIALES
+
+INSTAGRAM PERSONAL: [ _@xcaldb24x_ ](https://www.instagram.com/_xcaldb24x_/). 
 
 FACEBOOK:  [Carlos Delgado Benítez](https://www.facebook.com/carlos.delgadobenitez.9)
 
@@ -12,8 +13,7 @@ WHATSAPP:  [55-83-95-57-16]
 
 TWITTER:   [@Carlos_DB24](https://twitter.com/Carlos_DB24)
 
-
-#### SOPORTE O ACLARACIONES
+SOPORTE O ACLARACIONES
 
 Correo electrónico: carlosmaquina2402@gmail.com
 
