--- a/contacto.html
+++ b/contacto.html
@@ -3,19 +3,19 @@ layout: page
 title: CONTACTO
 ---
 
-REDES SOCIALES
+</p>REDES SOCIALES
 
-INSTAGRAM PERSONAL: [ _@xcaldb24x_ ](https://www.instagram.com/_xcaldb24x_/). 
+</p>INSTAGRAM PERSONAL: [ _@xcaldb24x_ ](https://www.instagram.com/_xcaldb24x_/). </p>
 
-FACEBOOK:  [Carlos Delgado Benítez](https://www.facebook.com/carlos.delgadobenitez.9)
+</p>FACEBOOK:  [Carlos Delgado Benítez](https://www.facebook.com/carlos.delgadobenitez.9)</p>
 
-WHATSAPP:  [55-83-95-57-16]
+</p>WHATSAPP:  [55-83-95-57-16]</p>
 
-TWITTER:   [@Carlos_DB24](https://twitter.com/Carlos_DB24)
+</p>TWITTER:   [@Carlos_DB24](https://twitter.com/Carlos_DB24)</p>
 
-SOPORTE O ACLARACIONES
+</p>SOPORTE O ACLARACIONES</p>
 
-Correo electrónico: carlosmaquina2402@gmail.com
+</p>Correo electrónico: carlosmaquina2402@gmail.com</p>
 
-Número telefónico: 55-83-95-57-16
+</p>Número telefónico: 55-83-95-57-16</p>
 
