--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/yo.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/salud.jpg" alt="" /></div><div class="content">
 								<h2>La Salud<br />
 								</h2>
 								<p>La salud es uno de los elementos más relevantes para el desarrollo de una vida larga y cualitativa. Es un estado de bienestar o de equilibrio que puede ser visto a nivel subjetivo (un ser humano asume como aceptable el estado general en el que se encuentra) o a nivel objetivo (se constata la ausencia de enfermedades o de factores dañinos en el sujeto en cuestión).</p>
