--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="curando.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="curado.jpg" alt="" /></div><div class="content">
 								<h2>MISIÓN<br />
 								</h2>
 								<p>Brindar servicios de salud centrados en el paciente, desarrollando programas médico-quirúrgicos enfocados a la prevención, tratamiento y rehabilitación, con ética, equidad, calidad y seguridad, formando talento humano de excelencia e innovando con investigación aplicada y fortaleciendo redes interinstitucionales en un marco de eficiencia y efectividad.</p>
