--- a/index.html
+++ b/index.html
@@ -57,34 +57,34 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>FRASES IMPORTANTES SOBRE LA SALUD/h2>
+								<p>Estas frases han sido muy importantes y relevantes en el mundo de la salud.<br />
+								Tener en cuenta estas frases te ayudara a tener una vida más sana./p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>-Sin salud la vida no es vida; es solo un estado de languidez y sufrimiento – una imagen de la muerte.-Buda.</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>-En una mente desordenada, como en un cuerpo desordenado, el sonido de la salud es imposible.-Cicerón.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>-Sanar es una cuestión de tiempo, pero a veces también es cuestión de oportunidad.-Hipócrates.</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>-Los diagnósticos son contradictorios. No se sabe si es meningitis o viruela, y algunas doctoras afirman que es una variedad de peste. La enfermedad dura poco, sus síntomas son la lividez del cuerpo, los labios oscuros, a menudo el vientre hinchado y grandes manchas en el cuerpo.</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>Un hospital es un buen lugar para establecer varios dilemas.</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p>-La salud es la riqueza real y no piezas de oro y plata.-Mahatma Gandhi.</p>
 								</li>
 							</ul>
 						</div>
