--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ layout: landing
 						<div class="inner">
 							<header class="major">
 								<h2>FRASES IMPORTANTES SOBRE LA SALUD/h2>
-								<p>Estas frases han sido muy importantes y relevantes en el mundo de la salud.<br />
-								Tener en cuenta estas frases te ayudara a tener una vida más sana./p>
+								<p>Estas frases han sido muy relevantes en el mundo de la salud.<br />
+								Ya que en un hospital es imporatnate tener en cuenta estas frases te ayudara a tener una mentalidad para recuperarte mejor y más rápido y tener una vida más sana./p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
