--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>FRASES IMPORTANTES SOBRE LA SALUD/h2>
+								<h2>FRASES IMPORTANTES SOBRE LA SALUD</h2>
 								<p>Estas frases han sido muy relevantes en el mundo de la salud.<br />
 								Ya que en un hospital es imporatnate tener en cuenta estas frases te ayudara a tener una mentalidad para recuperarte mejor y más rápido y tener una vida más sana./p>
 							</header>
