--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: landing
 								</p>
 							</header>
 							<ul class="icons major">
-				
+				                                <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></li> 
 							</ul>
 						</div>
 					</section>
