--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ layout: landing
 							</header>
 							<ul class="icons major">
 				                                <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></li> 
+							        <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></li>
 							</ul>
 						</div>
 					</section>
