--- a/contacto.html
+++ b/contacto.html
@@ -5,9 +5,11 @@ title: CONTACTO
 
 </p>REDES SOCIALES
 
-</p>INSTAGRAM PERSONAL: [ _@xcaldb24x_ ](https://www.instagram.com/_xcaldb24x_/). </p>
+facebook-official: https://facebook.com/<carlos.delgadobenitez.9>
 
-</p>FACEBOOK:  [Carlos Delgado Benítez](https://www.facebook.com/carlos.delgadobenitez.9)</p>
+</p>INSTAGRAM PERSONAL: https://www.instagram.com/_xcaldb24x_/>
+
+</p>FACEBOOK: https://www.facebook.com/carlos.delgadobenitez.9>
 
 </p>WHATSAPP:  [55-83-95-57-16]</p>
 
