--- a/contacto.html
+++ b/contacto.html
@@ -7,13 +7,13 @@ title: CONTACTO
 
 facebook-official: https://facebook.com/<carlos.delgadobenitez.9>
 
-</p>INSTAGRAM PERSONAL: https://www.instagram.com/_xcaldb24x_/>
+</p>INSTAGRAM PERSONAL: https://www.instagram.com/<_xcaldb24x_/>
 
-</p>FACEBOOK: https://www.facebook.com/carlos.delgadobenitez.9>
+</p>FACEBOOK: https://www.facebook.com/<carlos.delgadobenitez.9>
 
 </p>WHATSAPP:  [55-83-95-57-16]</p>
 
-</p>TWITTER:   [@Carlos_DB24](https://twitter.com/Carlos_DB24)</p>
+</p>TWITTER:  https://twitter.com/<Carlos_DB24>
 
 </p>SOPORTE O ACLARACIONES</p>
 
