--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@ layout: page
 title: CONTACTO
 ---
 
-</p>REDES SOCIALES
+</p>REDES SOCIALES</p>
 
 facebook-official: https://facebook.com/<carlos.delgadobenitez.9>
 
