--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="https://hospitalbenitez.github.io/citas.html" class="button fit">AGENDA TU CITA</a></li>
+								<li><a href="https://HOSPITAL-GARCIA.github.io/citas.html" class="button fit">PREPARA TU LUGAR</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
