--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>CADA VIDA<br />
-								IMPORTA</h2>
-								<p>QUEREMOS QUE NUESTRO MUNDO SE LLENE DE SALUD<br />
+								<h2>TU SALUD<br />
+								ES PRIMERO</h2>
+								<p>NOS IMPORTA TENERTE CON SALUD Y VIDA<br />
 								</p>
 							</header>
 							<ul class="icons major">
