--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/salud.jpg" alt="" /></div><div class="content">
-								<h2>La Salud<br />
+								<h2>El Bienestar<br />
 								</h2>
-								<p>La salud es uno de los elementos más relevantes para el desarrollo de una vida larga y cualitativa. Es un estado de bienestar o de equilibrio que puede ser visto a nivel subjetivo (un ser humano asume como aceptable el estado general en el que se encuentra) o a nivel objetivo (se constata la ausencia de enfermedades o de factores dañinos en el sujeto en cuestión).</p>
+								<p>Los entendidos definen el bienestar de manera diferente. Pero la mayoría coinciden en que bienestar significa estar sano desde el punto de vista físico, mental y emocional. No hay problema en tener mejor salud en algunas áreas de bienestar que en otras..</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/hp.jpg" alt="" /></div><div class="content">
 								<h2>HOSPITAL<br />
-								DELGADO</h2>
-								<p>Este hospital es un establecimiento destinado para la atención y asistencia a enfermos por medio de personal médico, enfermería, personal auxiliar y de servicios técnicos durante 24 horas, 365 días del año y disponiendo de tecnología, aparatología, instrumental y farmacología adecuadas.</p>
+								GARCIA</h2>
+								<p>Este hospital esta catalogado como uno de los mejores ya que siempre te brindamos buena atencion y los precios son sumamente accesibles, tambien tenemos de los mejores doctores y servicios para que nadie se quede o tenga una mala experiencia.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/curado.jpg" alt="" /></div><div class="content">
-								<h2>MISIÓN<br />
+								<h2>OBJETIVOS<br />
 								</h2>
-								<p>Brindar servicios de salud centrados en el paciente, desarrollando programas médico-quirúrgicos enfocados a la prevención, tratamiento y rehabilitación, con ética, equidad, calidad y seguridad, formando talento humano de excelencia e innovando con investigación aplicada y fortaleciendo redes interinstitucionales en un marco de eficiencia y efectividad.</p>
+								<p>La fabricación, la importación y la exportación de nueva y compleja tecnología médica, y la necesidad de normativas que rijan en todos los aspectos de la misma, hacen que la demanda de Bioingenieros se haga cada vez más relevante y que diferentes ámbitos prestadores de salud requieran de sus servicios..</p>
 							</div>
 						</section>
 					</section>
@@ -59,34 +59,34 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>"TU SALUD ES NUESTRA PRIORIDAD"</h2>
+								<h2>"TE QUEREMOS SANO Y SALVO"</h2>
 								<p><br />
 								</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3></h3>
-									<p>-Sin salud la vida no es vida; es solo un estado de languidez y sufrimiento – una imagen de la muerte.-Buda.</p>
+									<p>-La salud física y psicológica es uno de los bienes más preciados que podemos tener en la vida..</p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3></h3>
-									<p>-En una mente desordenada, como en un cuerpo desordenado, el sonido de la salud es imposible.-Cicerón.</p>
+									<p>-La mejor y más eficiente farmacia está dentro de tu propio sistema (Robert C. Peale).</p>
 								</li>
 								<li class="icon fa-code">
 									<h3></h3>
-									<p>-Sanar es una cuestión de tiempo, pero a veces también es cuestión de oportunidad.-Hipócrates.</p>
+									<p>-Puedes practicar deporte, puedes ser joven, pero si no te alimentas correctamente tu cuerpo sufrirá tarde o temprano.</p>
 								</li>
 								<li class="icon fa-headphones">
 									<h3></h3>
-									<p>-Los diagnósticos son contradictorios. No se sabe si es meningitis o viruela, y algunas doctoras afirman que es una variedad de peste. La enfermedad dura poco, sus síntomas son la lividez del cuerpo, los labios oscuros, a menudo el vientre hinchado y grandes manchas en el cuerpo.</p>
+									<p>-La salud es la mayor posesión. La alegría es el mayor tesoro. La confianza es el mayor amigo.</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3></h3>
-									<p>Un hospital es un buen lugar para establecer varios dilemas.</p>
+									<p>La primera riqueza es la salud.</p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3></h3>
-									<p>-La salud es la riqueza real y no piezas de oro y plata.-Mahatma Gandhi.</p>
+									<p>-El que tiene salud, tiene esperanza; el que tiene esperanza, lo tiene todo.</p>
 								</li>
 							</ul>
 						</div>
@@ -96,8 +96,8 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>¡GRACIAS POR VISITARNOS!</h2>
-								<p>Esperamos que este Hospital haya sido de su agrado y se ajuste a sus posibilidades. </p>
+							<h2>¿FUIMOS COMO ESPERABAS?</h2>
+								<p>Esperamos que hayas recibido la gran atencion que te ofrecemos, los resultados que esperabas y los precios hayan sido de tu agrado. </p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit">IR AL INICIO</a></li>
