--- a/citas.html
+++ b/citas.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: CITAS
+title: LUGAR
 ---
 
 <form action="https://formspree.io/f/xbjwknez" method="post">
@@ -16,7 +16,7 @@ title: CITAS
   <input type="text" id="number" name="number" value=""><br>
   <label for="name"> Fecha en que desea su cita:</label><br>
   <input type="date" id="date" name="date"><br>
-  <label for="name"> Comentarios o sugerencias sobre Hospital Delgado:</label><br>
+  <label for="name"> Comentarios sobre Hospital García:</label><br>
   <input type="text" id="comments" name="comments" value=""><br>
   <input type="submit" value="Enviar">
 </form>
