--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="https://HOSPITAL-GARCIA.github.io/citas.html" class="button fit">PREPARA TU LUGAR</a></li>
+								<li><a href="https://HOSPITAL-GARCIA.github.io/citas.html" class="button fit">AGENDA TU VISITA</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -17,9 +17,9 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>TU SALUD<br />
-								ES PRIMERO</h2>
-								<p>NOS IMPORTA TENERTE CON SALUD Y VIDA<br />
+								<h2>TU SALUD MENTAL<br />
+								ES IMPORTANTE</h2>
+								<p>EL ACOSO ESCOLAR NO ES UNA PROBLEMATICA CUALQUIERA Y COBRA MUCHISIMAS VIDAS ANUALMENTE<br />
 								</p>
 							</header>
 							<ul class="icons major">
