--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,4 +8,4 @@ title: UBICACIÓN
 	<p></p>
 	<hr />
 
-	<iframe src="https://maps.app.goo.gl/B5g76UqSYYs4XLQ99"></iframe>
+	<iframe src="19.423378604193864, -99.02049054595253"></iframe>
