--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>"TE QUEREMOS SANO Y SALVO"</h2>
+								<h2>"TIPOS DE ACOSO"</h2>
 								<p><br />
 								</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3></h3>
-									<p>-La salud física y psicológica es uno de los bienes más preciados que podemos tener en la vida..</p>
+									<p>-Se trata de insultos, burlas, apodos ofensivos y comentarios hirientes dirigidos a la victima.</p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3></h3>
-									<p>-La mejor y más eficiente farmacia está dentro de tu propio sistema (Robert C. Peale).</p>
+									<p>-Incluye agresiones fisicas como empujones, golpes, patadas y todo tipo de violencia fisica contra la victima.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3></h3>
-									<p>-Puedes practicar deporte, puedes ser joven, pero si no te alimentas correctamente tu cuerpo sufrirá tarde o temprano.</p>
+									<p>-Se refiere a la exclusión, marginacion o aislamiento social de la víctima; por ejemplo, ignorándola, haciendo rumores falsos o evitando su presencia en actividades.</p>
 								</li>
 								<li class="icon fa-headphones">
 									<h3></h3>
-									<p>-La salud es la mayor posesión. La alegría es el mayor tesoro. La confianza es el mayor amigo.</p>
+									<p>-Son comportamientos no deseados de naturaleza sexual, como tocamientos, insinuaciones, comentarios inapropiados y otros comportamientos.</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3></h3>
-									<p>La primera riqueza es la salud.</p>
+									<p>-Este tipo ocurre en linea y puede incluir mensajes de texto, correos electrónicos, publicaciones en redes sociales o chats en linea. Puede incluir cualquiera de los tipos de acoso anteriores.</p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3></h3>
