--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,4 +8,4 @@ title: UBICACIÓN
 	<p></p>
 	<hr />
 
-	<iframe src="19.423378604193864, -99.02049054595253"></iframe>
+	<iframe src="https://www.google.com/maps/place/UAEM+Ciudad+Universitaria+Nezahualc%C3%B3yotl/@19.4227158,-99.0229367,17z/data=!4m7!3m6!1s0x85d1fcb1164dcad1:0x11dc58053e9dc54b!4b1!8m2!3d19.4227108!4d-99.0203618!16s%2Fg%2F1tghpy5d?authuser=0&entry=ttu"></iframe>
