--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>"TIPOS DE ACOSO"</h2>
+								<h2>TIPOS DE ACOSO</h2>
 								<p><br />
 								</p>
 							</header>
