--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@ layout: landing
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3></h3>
+									<h3>ACOSO VERBAL</h3>
 									<p>-Se trata de insultos, burlas, apodos ofensivos y comentarios hirientes dirigidos a la victima.</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3></h3>
+									<h3>ACOSO FISICO</h3>
 									<p>-Incluye agresiones fisicas como empujones, golpes, patadas y todo tipo de violencia fisica contra la victima.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3></h3>
+									<h3>ACOSO SOCIAL O EMOCIONAL</h3>
 									<p>-Se refiere a la exclusión, marginacion o aislamiento social de la víctima; por ejemplo, ignorándola, haciendo rumores falsos o evitando su presencia en actividades.</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3></h3>
+									<h3>ACOSO SEXUAL</h3>
 									<p>-Son comportamientos no deseados de naturaleza sexual, como tocamientos, insinuaciones, comentarios inapropiados y otros comportamientos.</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3></h3>
+									<h3>CIBERACOSO</h3>
 									<p>-Este tipo ocurre en linea y puede incluir mensajes de texto, correos electrónicos, publicaciones en redes sociales o chats en linea. Puede incluir cualquiera de los tipos de acoso anteriores.</p>
 								</li>
 								<li class="icon fa-flag-o">
