--- a/citas.html
+++ b/citas.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: LUGAR
+title: CITA
 ---
 
 <form action="https://formspree.io/f/xbjwknez" method="post">
@@ -8,15 +8,13 @@ title: LUGAR
   <input type="text" id="name" name="name" value=""><br>
   <label for="lname">Apellidos:</label><br>
   <input type="text" id="lname" name="lname" value=""><br>
-  <label for="name"> Tipo de Servivio:</label><br>
-  <input type="text" id="complaint" name="complaint" value=""><br>    
   <label for="name"> Correo Electrónico (cliente):</label><br>
   E-mail: <input type="text" name="email"><br>
   <label for="name"> Número Telefónico:</label><br>
   <input type="text" id="number" name="number" value=""><br>
   <label for="name"> Fecha en que desea su cita:</label><br>
   <input type="date" id="date" name="date"><br>
-  <label for="name"> Comentarios sobre Hospital García:</label><br>
+  <label for="name"> Comentarios:</label><br>
   <input type="text" id="comments" name="comments" value=""><br>
   <input type="submit" value="Enviar">
 </form>
