--- a/citas.html
+++ b/citas.html
@@ -8,7 +8,7 @@ title: CITA
   <input type="text" id="name" name="name" value=""><br>
   <label for="lname">Apellidos:</label><br>
   <input type="text" id="lname" name="lname" value=""><br>
-  <label for="name"> Correo Electrónico (cliente):</label><br>
+  <label for="name"> Correo Electrónico:</label><br>
   E-mail: <input type="text" name="email"><br>
   <label for="name"> Número Telefónico:</label><br>
   <input type="text" id="number" name="number" value=""><br>
