--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: landing
 								</li>
 								<li class="icon fa-flag-o">
 									<h3></h3>
-									<p>-El que tiene salud, tiene esperanza; el que tiene esperanza, lo tiene todo.</p>
+									<p>-Es importante tratar a tiempo los casos, ya que con los años se pueden desencadenar problemas de autoestima, ansiedad y depresión, además de afectar la capacidad de una persona para formar relaciones saludables en el futuro.</p>
 								</li>
 							</ul>
 						</div>
@@ -97,7 +97,7 @@ layout: landing
 						<div class="inner">
 							<header>
 							<h2>¿FUIMOS COMO ESPERABAS?</h2>
-								<p>Esperamos que hayas recibido la gran atencion que te ofrecemos, los resultados que esperabas y los precios hayan sido de tu agrado. </p>
+								<p>Esperamos que hayas recibido la mejor atencion, trato y que le hayamos puesto fin a tu problema. </p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit">IR AL INICIO</a></li>
