--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,4 +8,4 @@ title: UBICACIÓN
 	<p></p>
 	<hr />
 
-	<iframe src="https://www.google.com/maps/place/Centro+de+Estudios+Tecnol%C3%B3gicos+Industrial+y+de+Servicios+No.+32/@19.4221347,-99.0684535,15z/data=!4m6!3m5!1s0x85d1fc6f81302925:0x7dc084d40095b908!8m2!3d19.4221347!4d-99.0684535!16s%2Fg%2F1hjh7v0lv?entry=ttu"></iframe>
+	<iframe src="https://www.google.com/maps/place/UAEM+Ciudad+Universitaria+Nezahualc%C3%B3yotl/@19.4227108,-99.0203618,15z/data=!4m6!3m5!1s0x85d1fcb1164dcad1:0x11dc58053e9dc54b!8m2!3d19.4227108!4d-99.0203618!16s%2Fg%2F1tghpy5d?entry=ttu"></iframe>
