--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,4 +8,4 @@ title: UBICACIÓN
 	<p></p>
 	<hr />
 
-	<iframe src="https://www.google.com/maps/place/UAEM+Ciudad+Universitaria+Nezahualc%C3%B3yotl/@19.4227108,-99.0203618,15z/data=!4m6!3m5!1s0x85d1fcb1164dcad1:0x11dc58053e9dc54b!8m2!3d19.4227108!4d-99.0203618!16s%2Fg%2F1tghpy5d?entry=ttu"></iframe>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.7613232504495!2d-99.02293672565715!3d19.422715840998197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fcb1164dcad1%3A0x11dc58053e9dc54b!2sUAEM%20Ciudad%20Universitaria%20Nezahualc%C3%B3yotl!5e0!3m2!1ses-419!2smx!4v1700804162042!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
